<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.EditarActivity">

    <TextView
            android:layout_width="186dp"
            android:layout_height="36dp"
            android:text="@string/tituloEdit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.056"
            android:id="@+id/editarT" android:textSize="24sp" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.55"/>

    <EditText
            android:layout_width="271dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="@string/hintName"
            android:ems="10"
            android:id="@+id/newName"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
            android:layout_marginRight="133dp" android:layout_marginTop="200dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/newPhone" app:layout_constraintHorizontal_bias="0.0"
            android:textColorHighlight="#FFFF66"/>
    <EditText
            android:layout_width="274dp"
            android:layout_height="39dp"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/hintPhone"
            android:id="@+id/newPhone"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="135dp"
            android:layout_marginRight="135dp" android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/newMail" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/newName" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="274dp"
            android:layout_height="41dp"
            android:inputType="textEmailAddress"
            android:hint="@string/hintMail"
            android:ems="10"
            android:id="@+id/newMail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="133dp"
            android:layout_marginRight="133dp" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/newPhone" app:layout_constraintHorizontal_bias="0.032"/>
    <Button
            android:text="@string/backH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp" app:layout_constraintEnd_toStartOf="@+id/button3"
            android:layout_marginEnd="50dp" android:layout_marginRight="50dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/newMail" android:layout_marginBottom="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onClick_Back"/>
    <Button
            android:text="@string/btnMod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/newMail" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="35dp" app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" android:layout_marginRight="80dp"
            android:onClick="onClick_Modificar"/>

    <ImageButton
            android:layout_width="180dp"
            android:layout_height="130dp"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/newPhoto" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/editarT" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="107dp" android:layout_marginRight="107dp"/>


</android.support.constraint.ConstraintLayout>