<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.VerActivity">

    <ImageView
            android:layout_width="190dp"
            android:layout_height="189dp" app:srcCompat="@drawable/profile"
            android:id="@+id/cPhoto" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="306dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="97dp" android:layout_marginStart="97dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="97dp" android:layout_marginRight="97dp"
            android:contentDescription="@string/contacPic" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cName" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="162dp"
            android:layout_marginStart="162dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cPhoto" android:layout_marginBottom="221dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="164dp" android:layout_marginRight="164dp"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cPhone" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cName" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="135dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="164dp" android:layout_marginRight="164dp"
            app:layout_constraintVertical_bias="0.06999999" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="164dp" android:layout_marginStart="164dp"
            android:onClick="makeCall"/>
    <TextView
            android:text="@string/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cMail" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cPhone" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="164dp" android:layout_marginRight="164dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="162dp"
            android:layout_marginStart="162dp" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="sendMail"/>
    <Button
            android:text="Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cMail" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="144dp" android:layout_marginRight="144dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="147dp"
            android:layout_marginStart="147dp" android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onClick_Home"/>
</android.support.constraint.ConstraintLayout>